samples/_failures_safe/1761440358_d96229_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8707c8c3.c: In function ‘main’:
./samples/SAFE/__tmp_8707c8c3.c:155:36: error: expected ‘;’ at end of input
  155 |     for (int i = 0; i < entry_count
      |                                    ^
      |                                    ;
./samples/SAFE/__tmp_8707c8c3.c:155:5: error: expected declaration or statement at end of input
  155 |     for (int i = 0; i < entry_count
      |     ^~~
